Menu test an fix routes "menus" to "menu"
